syntax = "proto3";

package bear.bear;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "bear/bear/params.proto";
import "bear/bear/bear.proto";

option go_package = "bear/x/bear/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/bear/bear/params";
  
  }
  
  // Queries a list of ShowBear items.
  rpc ShowBear (QueryShowBearRequest) returns (QueryShowBearResponse) {
    option (google.api.http).get = "/bear/bear/show_bear/{id}";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryShowBearRequest {
  uint64 id = 1;
}

message QueryShowBearResponse {
  Bear bear = 1;
}

